# daledou

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
config/: default.yaml  default_config.yaml  global.yaml  global_config.yaml  settings.yaml
docs/: one.md  other.md  two.md
src/: cli.py  run.py  timing.py
src/daledou/core/: cli.py  config.py  daledou.py  log.py  session.py  utils.py
src/daledou/tasks/: common.py  one.py  other.py  two.py
src/tasks/: __init__.py  evening.py  noon.py
src/utils/: client.py  config.py  log.py
