[project]
name = "daledou"
version = "13.4.2"
description = "Q宠大乐斗脚本辅助"
authors = [{ name = "雨园"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "V$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = false
